# tjanx-overlay

./: .env.example  docker-compose-dev.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile  Dockerfile.dev
backend/src/: env.rs  main.rs  tjanx_service.rs  websocket_service.rs
backend/src/errors/: bind_error.rs  environment_variables_error.rs  get_ranking_error.rs  mod.rs  run_error.rs  send_error.rs  websocket_connect_error.rs  websocket_connection_error.rs  websocket_send_error.rs
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  env.d.ts
frontend/src/lib/: Header.svelte  RankItem.svelte  RankList.svelte  debug.ts  stores.ts  websocket.ts
frontend/src/lib/components/: RankItem.svelte  RankList.svelte
validation/: .eslintrc  index.ts  package.json  pnpm-lock.yaml  rollup.config.js  schema_types.ts  schemas.js  tsconfig.json
validation/schemas/: tjanx_response.json
