[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = "0.18.0"
