[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.18.0", features = [
    "connect",
], default-features = false }
futures-util = { version = "0.3.28", default-features = false }
tokio = { version = "1.28.1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
], default-features = false }
hyper = { version = "0.14.26", features = [
    "tcp",
    "client",
    "http1",
], default-features = false }
hyper-tls = { version = "0.5.0", default-features = false }
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "fmt",
] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
